[package]
name = "soma"
version = "0.1.0"
edition = "2021"



[dependencies]
rdev = "0.5.3"
reqwest = {version = "0.12.*",features = ["multipart", "blocking"]}
scraper = "0.23.1"
regex = "1.11.1"

anyhow = "1"
arboard = "3.4.1"
bytemuck = { version = "1.19.0", features = ["derive"] }
glam = { version = "0.29.1", features = ["bytemuck"] }
image = "0.25.4"
pollster = "0.4.0"
wgpu = "23.0.0"
winit = { version = "0.30.5", features = ["rwh_06"] }
xcap = "0.0.14"
cleave-graphics = { path = "cleave-graphics" }

