[package]
name = "cleave-graphics"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { version = "0.29.1", features = ["bytemuck"] }
image = "0.25.4"
wgpu = "23.0.0"
bytemuck = { version = "1.19.0", features = ["derive"] }
winit = { version = "0.30.5", features = ["rwh_06"] }
thiserror = "1"